Hero Section - fix svg , buttons width on small devices , and glob svg padding

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,10 +16,12 @@
 }
 
 @layer utilities {
-  .text-8xl {
-    font-size: 7.5rem;
-  }
-  .text-7xl {
-    font-size: 6rem;
+  @responsive {
+    .text-8xl {
+      font-size: 7.5rem;
+    }
+    .text-7xl {
+      font-size: 6rem;
+    }
   }
 }
